# neopico-hd

./: .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AUTONOMOUS_TESTING.md  BANK1_CAPTURE_DEBUG_LOG.md  BANK1_GPIO_DEBUG.md  BANK1_LUT_FINDINGS.md  CLAUDE.md  CMakeLists.txt  GP25_CAPTURE_STATUS.md  README.md  RP2350_BANK1_PIO_FINDINGS.md  SCRATCHBOOK.md  STATE.md  convo.md  release
.github/workflows/: build.yml
docs/: 3BIT_RGB_FINDINGS.md  720P_PURPLE_GLITCH.md  720P_SAMSUNG_GAME_MODE_INVESTIGATION.md  ARCHITECTURE.md  AUDIO_CAPTURE.md  AUDIO_RESEARCH.md  AUDIO_VIDEO_INTEGRATION.md  BEST_PRACTICES.md  CPS2DIGIAV_AUDIO_CAPTURE.md  CPS2_DIGIAV_REFERENCE.md  CSYNC_IMPLEMENTATION_PLAN.md  DVI_PIN_TESTING.md  GENLOCK.md  GENLOCK_OPTION.md  GROK.md  HDMI_AUDIO_OUTPUT.md  HDMI_HSTX_IMPLEMENTATION.md  HSTX.md  HSTX_AUDIO_RESEARCH.md  HSTX_HDMI_AUDIO_FINDINGS.md  HSTX_HDMI_AUDIO_PLAN.md  HSTX_IMPLEMENTATION.md  HSTX_LAB_VS_NEOPICOH.md  How SHADOW and DARK Work on Neo Geo.MD  ITE_IT6615E.md  JUMPING_IMAGE_FIX.md  KNOWN_ISSUES.md  MVS_AUDIO_CAPTURE.md  MVS_AUDIO_SPECS.md  MVS_CAPTURE.md  MVS_DIGITAL_VIDEO.md  MVS_MV1C_DIGITAL_AUDIO.md  MVS_MV1C_DIGITAL_VIDEO.md  OSD_DIAGNOSTICS.md  OSD_IMPLEMENTATION.md  PCB_DESIGN_GUIDE.md  PHASE_LOCK_OPTIONS.md  PROJECT_STATUS.md  REBOOT_RESOLUTION_SWITCHING.md  SESSION_2025-11-29.md  (+5 more)
docs/pico2-datasheet/: ch01_introduction.md  ch02_system_bus.md  ch03_processor_subsystem.md  ch04_memory.md  ch05_bootrom.md  ch06_power.md  ch07_resets.md  ch08_clocks.md  ch09_gpio.md  ch10_security.md  ch11_pio.md  ch12_peripherals.md  ch13_otp.md  ch14_electrical_and_mechanical_e2.md  pilot_pages_1_50.md
hardware/: kibot-jlcpcb.yml
hardware/neopico-hd/: #auto_saved_files#  neopico-hd.kicad_dru  neopico-hd.kicad_pcb  neopico-hd.kicad_prl  neopico-hd.kicad_pro  neopico-hd.kicad_sch  neopico-hd.kicad_sym  sym-lib-table
hardware/neopico-hd/Library.pretty/: TDP158_RSB_WQFN-40-1EP_5x5mm_P0.4mm_EP3.15x3.15mm.kicad_mod
hardware/neopico-hd/fpc/: fpc.kicad_pcb  fpc.kicad_pro  fpc.kicad_sch
hardware/neopico-hd/fpc-20/: fpc.kicad_dru  fpc.kicad_pcb  fpc.kicad_pro  fpc.kicad_sch
hardware/pico-retrodigital/: pico-retrodigital.kicad_pcb  pico-retrodigital.kicad_pro  pico-retrodigital.kicad_sch  pico-retrodigital.kicad_sym  sym-lib-table
lib/pico_div2/: CMakeLists.txt  README.md  hstx_data_island_queue.c  hstx_data_island_queue.h  hstx_packet.c  hstx_pins.h  video_output.c  video_output.h
lib/pico_div2/src/: hstx_data_island_queue.c  hstx_packet.c  video_output.c
lib/pico_dvi2/: CMakeLists.txt  README.md  REUSABILITY.md
lib/pico_dvi2/examples/: README.md
lib/pico_dvi2/examples/bouncing_box/: CMakeLists.txt  main.c
lib/pico_dvi2/include/pico_dvi2/: hstx_data_island_queue.h  hstx_pins.h  video_output.h
lib/pico_dvi2/src/: hstx_data_island_queue.c  hstx_packet.c  video_output.c
misc/hstx_lab/: CMakeLists.txt  build.sh  flash.sh
misc/hstx_lab/pio/: blast_capture.pio
misc/hstx_lab/scripts/: build_common.sh  flash_common.sh
misc/hstx_lab/src/: analyzer.c  la_test.c  main.c  main_debug.c  picodvi_audio_test.c
reference/ossc/: .gitignore  README.md  ossc.cof  ossc.qsf  ossc.sdc  sys.qsys
reference/ossc/rtl/: linebuf.qip  linebuf.v  lpm_mult_8x5_9.qip  lpm_mult_8x5_9.v  lpm_mult_sl.qip  lpm_mult_sl.v  ossc.v  pll_2x.qip  pll_2x.v  (+3 more)
scripts/: analyze_frame.py  audit_firmware.py  build.sh  capture_with_screen.sh  convert_datasheet_full.py  convert_datasheet_pilot.py  deploy.sh  flash.sh  generate_gpio_lut.py  monitor_diagnostics.py  release.sh  reset_and_monitor.py  serial_monitor.py
src/: CMakeLists.txt  audio_capture.c  audio_capture.pio  audio_config.h  audio_pipeline_test.c  audio_usb_capture.c  capture_pins.h  capture_profile.h  data_packet.c  dvi_test.c  freq_counter.pio  freq_measure.c  freq_measure.pio  gpio_freq_analyzer.c  gpio_test.c  hdmi_adc_audio_test.c  hdmi_audio_test.c  hdmi_i2s_audio_test.c  hstx_audio_test.c  hstx_test.c  i2s_audio.pio  i2s_debug.c  i2s_usb_test.c  ili9341_bounce.c  lcd_pio.pio  main.c  main_dma.c  main_dvi.c  main_rgb.c  main_usb.c  mvs_capture.pio  mvs_pins.h  mvs_sync.pio  neopico_config.h  pins.h  rgb_benchmark.c  selftest.c  settings.c  settings.h  signal_capture.c  (+4 more)
src/audio/: audio_buffer.c  audio_buffer.h  audio_common.h  audio_config.h  audio_output.c  audio_output.h  audio_pipeline.c  audio_pipeline.h  audio_source.h  audio_subsystem.c  audio_subsystem.h  dc_filter.c  dc_filter.h  i2s_capture.c  i2s_capture.h  i2s_capture.pio  lowpass.c  lowpass.h  src.c  src.h
src/experiments/: lock_telemetry_experiment.c  lock_telemetry_experiment.h  menu_diag_experiment.c  menu_diag_experiment.h
src/hstx_audio/: data_packet.c  data_packet.h
src/misc/: bank1_gpio_speed_test.c  bank1_test.c  debug_render.c  debug_render.h  dvi_audio_test.c  gpio_activity_map.c  gpio_freq_analyzer.c  gpio_simple_test.c  pio_pc_tracker.c  test_patterns.c  test_patterns.h
src/misc/hstx_lab/: INTEGRATION_PLAN.md
src/misc/hstx_lab/pio/: blink.pio  freq_count.pio
src/misc/hstx_lab/scripts/: env.sh
src/misc/hstx_lab/src/: main.c
src/osd/: fast_osd.c  fast_osd.h  font_8x8.h  osd.c  osd.h  selftest.c  selftest.h  selftest_layout.c  selftest_layout.h  selftest_sample.pio
src/testfw/: sync_probe.c  sync_probe.h  sync_probe.pio
src/video/: gpio_rgb_lut.h  hardware_config.h  hdmi_data_island_queue.c  hdmi_data_island_queue.h  line_ring.h  mvs_color.h  mvs_color_model.h  mvs_effect_lut.h  mvs_effect_model.h  osd.c  osd.h  scale_pixels.S  video_capture.c  video_capture.h  video_capture.pio  video_capture_mvs.c  video_capture_mvs.pio  video_capture_snes.c  video_capture_snes.pio  video_config.h  video_output.c  video_output.h  video_pipeline.c  video_pipeline.h
tests/: README.md  check_color_menu_contract.py  mvs_color_exhaustive.c  mvs_color_reference.h  run_mvs_color_exhaustive.sh
tools/logic_analyzer/: CMakeLists.txt  README.md  audio_logic_analyzer.c  build.sh  capture.pio  capture_data.npz  viewer.py
viewer/: analyze_capture.py  audio_capture.py  capture_frame.py  i2s_audio_test.py  i2s_raw_dump.py  run.sh
(+81 files in other folders)
